--- a/trading/templates/trading/Login.html
+++ b/trading/templates/trading/Login.html
@@ -1,10 +1,51 @@
-{% extends 'trading/base.html' %}
-
+{% load static %}
 {% block content %}
-<h2>Login</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-</form>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Форма авторизации</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
+</head>
+<body>
+    <div class="auth-container">
+        <div class="auth-box">
+            <div class="auth-content">
+                <button class="back-button" onclick="window.history.back();">←</button>
+                <div class="auth-logo">
+                    <img src="{% static 'images/logo.svg' %}" alt="Логотип Trading Broker" class="logo-img">
+                </div>
+                <h1 class="auth-title">Войти</h1>
+                <p class="auth-subtitle">Ещё не зарегистрированы? <a href="{% url 'register' %}" class="link">Регистрация</a></p>
+
+                <form action="{% url 'login' %}" method="post" class="auth-form">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <input type="username" name="username" placeholder="Username *" class="form-input" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" name="password" placeholder="Пароль *" class="form-input" required>
+                    </div>
+                    <div class="form-actions">
+                        <label class="form-remember">
+                            <input type="checkbox" name="remember_me"> Запомнить меня
+                        </label>
+                        <a  class="form-forgot">Восстановление пароля</a>
+                    </div>
+                    <button type="submit" class="btn-primary">Войти</button>
+                    <div class="separator">
+                        <hr class="line"> <span class="or-text">или</span> <hr class="line">
+                    </div>
+                    <button type="button" class="btn-google">
+                        <img src="{% static 'images/image%402x.png' %}" alt="Google Logo" class="google-logo">
+                        Вход через аккаунт Google
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
 {% endblock %}
